[project]
name = "data-monitor"
version = "0.1.0"
description = "S-Semi 반도체 시료 생산주문관리 시스템 - 데이터 모니터링 Tool PoC"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
data-monitor = "data_monitor.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
